; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_ph_position_menu.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_ph_position_menu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@Pt_ARG_POINTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @gui_ph_position_menu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gui_ph_position_menu(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @PtWidgetParent(i32* %7)
  %9 = call i32* @PtWidgetChildBack(i32 %8)
  store i32* %9, i32** %5, align 8
  br label %10

10:                                               ; preds = %33, %2
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %36

13:                                               ; preds = %10
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* @Pt_ARG_POINTER, align 4
  %16 = call i32 @PtGetResource(i32* %14, i32 %15, %struct.TYPE_3__** %6, i32 0)
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %18 = icmp ne %struct.TYPE_3__* %17, null
  br i1 %18, label %19, label %33

19:                                               ; preds = %13
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp slt i32 %20, %23
  br i1 %24, label %25, label %33

25:                                               ; preds = %19
  %26 = load i32*, i32** %3, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = icmp ne i32* %26, %27
  br i1 %28, label %29, label %33

29:                                               ; preds = %25
  %30 = load i32*, i32** %3, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @PtWidgetInsert(i32* %30, i32* %31, i32 1)
  br label %36

33:                                               ; preds = %25, %19, %13
  %34 = load i32*, i32** %5, align 8
  %35 = call i32* @PtWidgetBrotherInFront(i32* %34)
  store i32* %35, i32** %5, align 8
  br label %10

36:                                               ; preds = %29, %10
  ret void
}

declare dso_local i32* @PtWidgetChildBack(i32) #1

declare dso_local i32 @PtWidgetParent(i32*) #1

declare dso_local i32 @PtGetResource(i32*, i32, %struct.TYPE_3__**, i32) #1

declare dso_local i32 @PtWidgetInsert(i32*, i32*, i32) #1

declare dso_local i32* @PtWidgetBrotherInFront(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
